2004-09-06  Shaun McCance  <shaunm@gnome.org>

	* docs/C/battstat-C.omf:
	* docs/C/battstat.xml:
	- New battstat docs from Angela Boyle

2004-09-04  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: Fix a build problem for BSD. Closes #151824.
	Patch from Julio M. Merino Vidal <jmmv@menta.net>.

2004-08-30  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: Fix a crasher with battery notifications. Closes
	#151412. Patch by Carlos Garnacho Parro <carlosg@gnome.org>.

2004-08-09  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: Another largish string break (related to the last
	one). Things are generally fixed up. Closes bug #149586.

2004-08-08  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c: Huge string break. Improved all strings to give
	battery state in form "xx hours xx minutes (xx%) remaining". Closes
	#89866. Also makes warning dialogs more HIG compliant.

2004-08-03  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c (size_allocate): Use the size_allocate signal
	to get the panel real size. Fixes bug #144413.
	(create_layout): Add a intermediate vbox to the applet layout to
	make the applet icons centered on wide vertical panels. Fixes bug
	#136457.
	(change_orient): Test if the charge percent is displayed before
	making the applet horizontal on vertical panels.
	Patch by Vincent Noel <vnoel@cox.net>.

2004-07-25  Kjartan Maraas  <kmaraas@gnome.org>

	* battstat_applet.c: (destroy_applet): Merge fix
	for bug #145340 from stable. (Fixes a small leak).

2004-07-22  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat/battstat_applet.c: Fix references to certain apm_info
	structs that don't exist in FreeBSD. Patch from Joe Marcus Clarke
	<marcus@freebsd.org>. Closes #148048.

2004-07-09  Vincent Noel  <vnoel@cox.net>

	* battstat_applet.c (change_orient): Make the applet horizontal
	on wide vertical panels.

2004-07-02  Christian Neumair  <chris@gnome-de.org>

	* properties.c (prop_cb): Fix 'Probress Bar' a11y typos.
