@@ -1,3 +1,7 @@
+2004-09-21  Enver ALTIN  <ealtin@parkyeri.com>
+
+	* battstat_applet.c: Fixed a type-o.
+
 2004-09-06  Shaun McCance  <shaunm@gnome.org>
 
 	* docs/C/battstat-C.omf:
